Solo las vistas

--- a/Practica2_amc/src/Vistas/VistaPricipal.form
+++ b/Practica2_amc/src/Vistas/VistaPricipal.form
@@ -34,6 +34,20 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemComprobar">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Comprobar Palabra"/>
+                <Property name="actionCommand" type="java.lang.String" value="ComprobarPalabra"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemComprobarActionPerformed"/>
+              </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
+            </MenuItem>
+          </SubComponents>
         </Menu>
       </SubComponents>
     </Menu>
