--- a/Practica2_amc/src/Vistas/VistaPricipal.form
+++ b/Practica2_amc/src/Vistas/VistaPricipal.form
@@ -32,7 +32,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Edit"/>
+            <Property name="text" type="java.lang.String" value="Aplicaci&#xf3;n"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemComprobar">
