--- a/Practica2_amc/src/Vistas/Vista_Inicial.form
+++ b/Practica2_amc/src/Vistas/Vista_Inicial.form
@@ -70,7 +70,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="36" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Nacho Vel&#xe1;zquez "/>
+        <Property name="text" type="java.lang.String" value="Nacho Vel&#xe1;zquez Mu&#xf1;oz "/>
       </Properties>
     </Component>
   </SubComponents>
